<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_game_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_game"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menu_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menu_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/bot_game_btn"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/bot_menu"
            android:onClick="onClickBot"/>

        <Button
            android:id="@+id/user_game_btn"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/user_menu"
            android:onClick="onClickUser" />

        <Button
            android:id="@+id/rules_game_btn"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:onClick="onClickRules" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>